product details added

--- a/public/projects.json
+++ b/public/projects.json
@@ -4,6 +4,11 @@
     "image": "https://i.ibb.co/qM5FXGT/resale-Laptop.png",
     "name": "Resale Laptop",
     "details": " Its a laptop buying/selling website.",
+    "detailsImage": {
+      "first": "https://i.ibb.co/QXLbLFD/ressale-Categories.png",
+      "second": "https://i.ibb.co/V29tTGb/resale-Addproduct.png",
+      "third": "https://i.ibb.co/VptcTrM/resale-Myproducts.png"
+    },
     "link": "https://my-assignment-12-e6b37.web.app/",
     "ratings": 4.8
   },
@@ -12,6 +17,11 @@
     "image": "https://i.ibb.co/wBwzXXz/gameNote.png",
     "name": "Game Note",
     "details": " Its a Gaming topup based website.",
+    "detailsImage": {
+      "first": "https://i.ibb.co/RQV2dPW/gamenote-Home.png",
+      "second": "https://i.ibb.co/ZNtW8LV/gamenote-Service-Details.png",
+      "third": "https://i.ibb.co/zXYXX85/game-Note-Update-Review.png"
+    },
     "link": "https://my-assignment-11-92c6d.web.app/",
     "ratings": 4.7
   },
@@ -20,6 +30,11 @@
     "image": "https://i.ibb.co/9nYhxbX/eStack.png",
     "name": "E Stack",
     "details": "Its a educational courses based website.",
+    "detailsImage": {
+      "first": "https://i.ibb.co/g428phh/Estack-Dark-Theme.png",
+      "second": "https://i.ibb.co/QkmW1MN/Estack-Pdf-Download.png",
+      "third": "https://i.ibb.co/9g0vtSh/Estac-Light-Theme.png"
+    },
     "link": "https://assignment-10-client-78ac3.web.app/",
     "ratings": 4.5
   }
